Fix sidechain proposal bug, refactor, gui updates
* Fix sidechain proposal hashID2, was 256 bits and should have been 160.

* Make it so that the RPC and GUI versions of createsidechainproposal
validate hashID1 and hashID2

* Update tests for new sidechain code

* Move uint160S() from tests to src/uint256.h

--- a/src/qt/forms/sidechainminerdialog.ui
+++ b/src/qt/forms/sidechainminerdialog.ui
@@ -385,7 +385,7 @@
              <item>
               <widget class="QLabel" name="label_11">
                <property name="text">
-                <string>Release tarball hash</string>
+                <string>Release tarball hash (256 bits)</string>
                </property>
               </widget>
              </item>
@@ -434,7 +434,7 @@
              <item>
               <widget class="QLabel" name="label_12">
                <property name="text">
-                <string>Build commit hash</string>
+                <string>Build commit hash (160 bits)</string>
                </property>
               </widget>
              </item>
